option(
    'first-boot-set-mac', type: 'feature', description: 'Set MAC address on first boot.',
)
option(
    'first-boot-set-hostname', type: 'feature', description: 'Set hostname on first boot.',
)
option(
    'http-redirect', type: 'feature', description: 'Redirect http traffic to https.',
}
option(
    'usb-ctrl', type: 'feature', description: 'Control USB gadget devices',
)
